[gd_scene load_steps=5 format=2]

[ext_resource path="res://Font/SourceSerifPro-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Empty.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Empty" type="Node2D"]
script = ExtResource( 2 )

[node name="TestLabel" type="Label" parent="."]
margin_left = -4.24268
margin_top = 83.4142
margin_right = 1920.76
margin_bottom = 207.414
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestText" type="Label" parent="."]
margin_left = 2.0
margin_top = 382.0
margin_right = 1922.0
margin_bottom = 1071.0
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Translation" type="Button" parent="."]
margin_left = 700.516
margin_top = 317.5
margin_right = 1208.52
margin_bottom = 486.5
custom_fonts/font = SubResource( 2 )
text = "TRANSLATION"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Translation" to="." method="_on_Translation_pressed"]
